--- a/css/timeline.css
+++ b/css/timeline.css
@@ -660,7 +660,7 @@
 }
 .tl-mobile .tl-menubar-button:hover {
   background-color: rgba(242, 242, 242, 0.67);
-  color: #737373;
+  color: #cbbeda;
 }
 .tl-mobile .tl-menubar-button:active {
   background: #c34528;
@@ -1005,7 +1005,7 @@
   -ms-user-select: none;
   user-select: none;
   box-shadow: 1px 1px 1px #FFF;
-}
+} /*This below changes the time marker round pointer block on the timeline before state */
 .tl-timemarker .tl-timemarker-line-left:after,
 .tl-timemarker .tl-timemarker-line-right:after {
   display: block;
@@ -1015,12 +1015,12 @@
   bottom: 0px;
   height: 6px;
   width: 6px;
-  background-color: #919191;
+  background-color: #8f6eae;
   z-index: 8;
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
   border-radius: 50%;
-}
+} /*This below changes the time marker on the timeline before state */
 .tl-timemarker .tl-timemarker-content-container {
   position: absolute;
   background-color: #e5e5e5;
@@ -1126,7 +1126,7 @@
 .tl-timemarker .tl-timemarker-content-container .tl-timemarker-content .tl-timemarker-media-container [class*=" tl-icon-"] {
   display: block;
   font-size: 24px;
-  color: #bfbfbf;
+  color: #8f6eae;
   margin-top: 0px;
 }
 .tl-timemarker .tl-timemarker-content-container .tl-timemarker-content .tl-timemarker-media-container .tl-icon-wikipedia {
@@ -1147,7 +1147,7 @@
 }
 .tl-timemarker:hover .tl-timemarker-timespan .tl-timemarker-timespan-content,
 .tl-timemarker:focus .tl-timemarker-timespan .tl-timemarker-timespan-content {
-  background-color: #bfbfbf;
+  background-color: #cbbeda;
 }
 .tl-timemarker:hover .tl-timemarker-timespan .tl-timemarker-line-left,
 .tl-timemarker:focus .tl-timemarker-timespan .tl-timemarker-line-left,
@@ -1159,12 +1159,12 @@
 .tl-timemarker:focus .tl-timemarker-timespan .tl-timemarker-line-left:after,
 .tl-timemarker:hover .tl-timemarker-timespan .tl-timemarker-line-right:after,
 .tl-timemarker:focus .tl-timemarker-timespan .tl-timemarker-line-right:after {
-  background-color: #3d3d3d;
+  background-color: #cbbeda;
 }
 .tl-timemarker:hover .tl-timemarker-content-container,
 .tl-timemarker:focus .tl-timemarker-content-container {
-  background-color: #737373;
-  border-color: #a6a6a6;
+  background-color: #cbbeda;
+  border-color: #cbbeda;
   -webkit-transition: height 250ms cubic-bezier(0.77, 0, 0.175, 1), width 250ms cubic-bezier(0.77, 0, 0.175, 1);
   -moz-transition: height 250ms cubic-bezier(0.77, 0, 0.175, 1), width 250ms cubic-bezier(0.77, 0, 0.175, 1);
   -o-transition: height 250ms cubic-bezier(0.77, 0, 0.175, 1), width 250ms cubic-bezier(0.77, 0, 0.175, 1);
@@ -1493,7 +1493,7 @@
   position: absolute;
   top: 0;
   left: 0;
-  background-color: #f2f2f2;
+  background-color: #f3f0f7;
   display: -ms-flexbox;
   display: -webkit-flex;
   display: flex;
@@ -1513,7 +1513,7 @@
   transition-timing-function: cubic-bezier(0.77, 0, 0.175, 1);
 }
 .tl-timegroup .tl-timegroup-message {
-  color: #e0e0e0;
+  color: #8f6eae;
   text-shadow: #FFF 0px 2px 2px;
   margin-left: 80px;
 }
@@ -1612,23 +1612,23 @@
   background-color: #FFF;
 }
 .tl-timeaxis .tl-timeaxis-content-container .tl-timeaxis-major .tl-timeaxis-tick {
-  font-size: 12px;
+  font-size: 18px;
   line-height: 14px;
-  color: #737373;
+  color: #8f6eae;
   width: 100px;
   margin-left: -50px;
 }
 .tl-timeaxis .tl-timeaxis-content-container .tl-timeaxis-major .tl-timeaxis-tick:before {
-  border-color: #a6a6a6;
-  font-size: 18px;
-  line-height: 18px;
+  border-color: #8f6eae;
+  font-size: 20px;
+  line-height: 22px;
   margin-bottom: 2px;
   margin-left: 50px;
 }
 .tl-timeaxis .tl-timeaxis-content-container .tl-timeaxis-minor .tl-timeaxis-tick {
-  font-size: 11px;
+  font-size: 12px;
   line-height: 13px;
-  color: #bfbfbf;
+  color: #8f6eae;
   width: 50px;
   margin-left: -25px;
 }
@@ -1643,7 +1643,7 @@
   font-size: 9px;
   line-height: 9px;
   margin-top: -2px;
-  color: #e6e6e6;
+  color: #8f6eae;
 }
 .tl-timeaxis .tl-timeaxis-content-container .tl-timeaxis-minor .tl-timeaxis-tick:before {
   font-size: 9px;
@@ -2483,7 +2483,7 @@
   vertical-align: middle;
   text-align: left;
   text-shadow: none;
-  color: #737373;
+  color: #cbbeda;
 }
 .tl-text p {
   color: #737373;
@@ -2872,7 +2872,7 @@
   -o-user-select: none;
   user-select: none;
   background-color: #FFF;
-  color: #737373;
+  color: #cbbeda;
   -webkit-box-sizing: content-box;
   -moz-box-sizing: content-box;
   box-sizing: content-box;
