--- a/css/timeline.css
+++ b/css/timeline.css
@@ -127,7 +127,7 @@
 }
 .tl-timeline p a:hover,
 .tl-timeline p a:focus {
-  color: #c34528;
+  color: #8f6eae;
 }
 @media (-webkit-min-device-pixel-ratio: 1.5), (min-resolution: 144dpi) {
   .tl-timeline p a {
