--- a/css/timeline.css
+++ b/css/timeline.css
@@ -1516,7 +1516,7 @@
     text-shadow: #FFF 0px 2px 2px;
     background-color: rgba(255, 255, 255, 0.5);
     backdrop-filter: blur(3px);
-    padding: 30px;
+    padding: 3em;
     width: 22%;
     padding-left: 60px;
     margin-left: 0px;
