--- a/css/timeline.css
+++ b/css/timeline.css
@@ -1516,10 +1516,15 @@
     text-shadow: #FFF 0px 2px 2px;
     background-color: rgba(255, 255, 255, 0.5);
     backdrop-filter: blur(3px);
-    padding: 1.2em;
-    width: 35%;
-    padding-left: 60px;
-    margin-left: 0px;
+    padding: 1.3em 0em 1.3em 0em;
+    width: 33%;
+    padding-left: 43px;
+    margin-left: 1px;
+    font-family: 'PT Sans Narrow', sans-serif;
+    font-weight: 600;
+    text-transform: uppercase;
+    line-height: 1em;
+    font-size: 15px;
 }
 .tl-timegroup.tl-timegroup-alternate {
   background-color: #fafafa;
