--- a/css/timeline.css
+++ b/css/timeline.css
@@ -1509,15 +1509,16 @@
   -moz-transition-timing-function: cubic-bezier(0.77, 0, 0.175, 1);
   -o-transition-timing-function: cubic-bezier(0.77, 0, 0.175, 1);
   transition-timing-function: cubic-bezier(0.77, 0, 0.175, 1);
-}
-.tl-timegroup .tl-timegroup-message {
+
+	/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 768px) { .tl-timegroup .tl-timegroup-message {
     color: #8f6eae;
     z-index: 9;
     text-shadow: #FFF 0px 2px 2px;
     background-color: rgba(255, 255, 255, 0.5);
     backdrop-filter: blur(3px);
-    padding: 1.3em 0em 1.3em 0em;
-    width: 33%;
+    padding: 1.4em 0em 1.4em 0em;
+    width: 20%;
     padding-left: 43px;
     margin-left: 1px;
     font-family: 'PT Sans Narrow', sans-serif;
@@ -1525,7 +1526,24 @@
     text-transform: uppercase;
     line-height: 1em;
     font-size: 15px;
-}
+}}
+
+@media only screen and (max-width: 768px) { .tl-timegroup .tl-timegroup-message {
+    color: #8f6eae;
+    z-index: 9;
+    text-shadow: #FFF 0px 2px 2px;
+    background-color: rgba(255, 255, 255, 0.5);
+    backdrop-filter: blur(3px);
+    padding: 1.3em 0em 1.3em 0em;
+    width: 50%;
+    padding-left: 43px;
+    margin-left: 1px;
+    font-family: 'PT Sans Narrow', sans-serif;
+    font-weight: 600;
+    text-transform: uppercase;
+    line-height: 1em;
+    font-size: 15px;
+}}
 .tl-timegroup.tl-timegroup-alternate {
   background-color: #fafafa;
 }
