--- a/css/timeline.css
+++ b/css/timeline.css
@@ -1,51 +1,196 @@
+/*!
+	Timeline JS 3 
+	
+	Designed and built by Zach Wise for the Northwestern University Knight Lab
+	
+	This Source Code Form is subject to the terms of the Mozilla Public
+	License, v. 2.0. If a copy of the MPL was not distributed with this
+	file, You can obtain one at https://mozilla.org/MPL/2.0/.
 
-p a:hover,
-p a:focus {
+*/
+/* Includes 
+================================================== */
+/*	VARIABLES
+	BASE
+----------------------------------------------------- */
+/* ICON PATH
+================================================== */
+/* TYPEFACE
+================================================== */
+/* COLOR SCHEME
+================================================== */
+/* UI COLOR
+================================================== */
+/* UI
+================================================== */
+/* Animation
+================================================== */
+/* GFX
+================================================== */
+/*!
+	Timeline JS 3
 
+	Designed and built by Zach Wise for the Northwestern University Knight Lab
+
+	This Source Code Form is subject to the terms of the Mozilla Public
+	License, v. 2.0. If a copy of the MPL was not distributed with this
+	file, You can obtain one at https://mozilla.org/MPL/2.0/.
+
+*/
+/* Includes
+================================================== */
+/*	Mixins.less
+	Snippets of reusable CSS to develop faster and keep code readable
+ * ----------------------------------------------------------------- */
+.tl-timeline {
+    font-family: "trade-gothic-next", sans-serif !important; /* Replace with the Typekit font you’re using */
+}  /* VCard
+	================================================== */
+}
+.tl-timeline h1,
+.tl-timeline h2,
+.tl-timeline h3,
+.tl-timeline h4,
+.tl-timeline h5,
+.tl-timeline h6  {
+  font-family: "trade-gothic-next", sans-serif !important;
+  text-transform: none !important;
+  color: #000;
+}
+.tl-timeline h1,
+.tl-timeline h2,
+.tl-timeline h3 {
+  font-family: "trade-gothic-next", sans-serif !important;
+text-transform: none !important;
+  font-size: 28px;
+  line-height: 28px;
+}
+.tl-timeline h1 small,
+.tl-timeline h2 small,
+.tl-timeline h3 small {
+  font-family: "trade-gothic-next", sans-serif !important;
+  font-size: 24px;
+  line-height: 24px;
+}
+.tl-timeline h4,
+.tl-timeline h5,
+.tl-timeline h6 {
+  font-family: "trade-gothic-next", sans-serif !important;
+  font-size: 24px;
+  line-height: 24px;
+  margin-bottom: 0px;
+}
+.tl-timeline h4 small,
+.tl-timeline h5 small,
+.tl-timeline h6 small {
+  font-family: "trade-gothic-next", sans-serif !important;
+  font-size: 15px;
+  line-height: 15px;
+}
+.tl-timeline h2.tl-headline-title {
+  font-family: "trade-gothic-next", sans-serif !important;
+  font-size: 38px;
+  line-height: 38px;
+}
+.tl-timeline h2.tl-headline-title small {
+  font-family: "trade-gothic-next", sans-serif !important;
+  display: block;
+  margin-top: 5px;
+  font-size: 24px;
+  line-height: 24px;
+}
+.tl-timeline h2 {
+  font-family: "trade-gothic-next", sans-serif !important;
+  text-transform: none;
+  margin-top: 20px;
+  margin-bottom: 5px;
+}
+.tl-timeline p {
+  font-family: "trade-gothic-next", sans-serif !important;
+  margin-top: 5px;
+  margin-bottom: 10px;
+  font-size: 15px;
+  line-height: 1.42857143;
+  color: #E30613;
+}
+.tl-timeline p.lead {
+  font-family: "trade-gothic-next", sans-serif !important;
+  font-size: 24px;
+}
+.tl-timeline p a {
+  /*
+			color: lighten(@color-dark, 40%);
+			text-decoration: none;
+			background-image: -moz-linear-gradient(top, fade(lighten(@color-dark, 40%), 0%) 50%, fade(lighten(@color-dark, 40%), 60%) 50%);
+			background-image: -webkit-linear-gradient(top, fade(lighten(@color-dark, 40%), 0%) 50%, fade(lighten(@color-dark, 40%), 60%) 50%);
+			background-image: -o-linear-gradient(top, fade(lighten(@color-dark, 40%), 0%) 50%, fade(lighten(@color-dark, 40%), 60%) 50%);
+			background-image: linear-gradient(to bottom, fade(lighten(@color-dark, 40%), 0%) 50%, fade(lighten(@color-dark, 40%), 60%) 50%);
+			background-repeat: repeat-x;
+			background-size: 2px 2px;
+			background-position: 0 @base-font-size+2;
+			text-shadow: -2px -1px 0 white, 2px -1px 0 white, -2px 1px 0 white, 2px 1px 0 white;
+			&:hover,
+			&:focus {
+				color:@color-theme;
+				text-decoration: none;
+			}
+			*/
+  color: #E30613;
+  text-decoration: underline;
+}
+.tl-timeline p a:hover,
+.tl-timeline p a:focus {
+  font-family: "trade-gothic-next", sans-serif;
+  color: #8f6eae;
 }
 @media (-webkit-min-device-pixel-ratio: 1.5), (min-resolution: 144dpi) {
-p a {
+  .tl-timeline p a {
+    font-family: "trade-gothic-next", sans-serif;
     text-decoration: underline;
     background-image: none;
     text-shadow: none;
   }
-p a:hover,
-p a:focus {
+  .tl-timeline p a:hover,
+  .tl-timeline p a:focus {
     color: #E30613;
     text-decoration: underline;
   }
 }
-b,
-strong {
+.tl-timeline b,
+.tl-timeline strong {
+  font-family: "trade-gothic-next", sans-serif;
   font-weight: bold;
 }
-i,
-em {
+.tl-timeline i,
+.tl-timeline em {
+  font-family: "trade-gothic-next", sans-serif;
   font-style: italic;
 }
-a {
+.tl-timeline a {
+  font-family: "trade-gothic-next", sans-serif;
   text-decoration: none;
   color: #E30613;
 }
-a:hover {
+.tl-timeline a:hover {
   font-family: "trade-gothic-next", sans-serif;
   text-decoration: underline;
   color: #E30613;
 }
-.tl-caption,
-.tl-credit,
-.tl-slidenav-next,
-.tl-slidenav-previous {
+.tl-timeline .tl-caption,
+.tl-timeline .tl-credit,
+.tl-timeline .tl-slidenav-next,
+.tl-timeline .tl-slidenav-previous {
+  font-family: "trade-gothic-next", sans-serif;
   font-size: 11px;
   line-height: 11px;
 }
-.tl-caption a,
-.tl-credit a,
-.tl-slidenav-next a,
-.tl-slidenav-previous a {
+.tl-timeline .tl-caption a,
+.tl-timeline .tl-credit a,
+.tl-timeline .tl-slidenav-next a,
+.tl-timeline .tl-slidenav-previous a {
   color: #000;
 }
-.tl-makelink {
+.tl-timeline .tl-makelink {
   font-family: "trade-gothic-next", sans-serif;
   word-break: break-all;
   word-break: break-word;
@@ -53,8 +198,8 @@ a:hover {
   -moz-hyphens: auto;
   hyphens: auto;
 }
-blockquote,
-blockquote p {
+.tl-timeline blockquote,
+.tl-timeline blockquote p {
   font-family: "trade-gothic-next", sans-serif;
   color: #999999;
   font-size: 24px;
@@ -64,8 +209,8 @@ blockquote p {
   border: 0px;
   padding: 0px;
 }
-blockquote cite,
-blockquote p cite {
+.tl-timeline blockquote cite,
+.tl-timeline blockquote p cite {
   font-family: "trade-gothic-next", sans-serif;
   font-size: 11px;
   color: #666666;
@@ -73,11 +218,11 @@ blockquote p cite {
   text-align: right;
   font-style: normal;
 }
-blockquote cite:before,
- blockquote p cite:before {
+.tl-timeline blockquote cite:before,
+.tl-timeline blockquote p cite:before {
   content: "\2014";
 }
-blockquote p:before {
+.tl-timeline blockquote p:before {
   font-family: "trade-gothic-next", sans-serif;
   content: open-quote;
   display: inline-block;
@@ -86,7 +231,7 @@ blockquote p:before {
   top: 8px;
   margin-right: 5px;
 }
-blockquote p:after {
+.tl-timeline blockquote p:after {
   font-family: "trade-gothic-next", sans-serif;
   content: close-quote;
   display: inline-block;
@@ -95,94 +240,94 @@ blockquote p:after {
   top: 8px;
   margin-left: 3px;
 }
-blockquote {
+.tl-timeline blockquote {
   font-family: "trade-gothic-next", sans-serif;
   margin: 10px;
 }
-blockquote p {
+.tl-timeline blockquote p {
   font-family: "trade-gothic-next", sans-serif;
   margin: 0;
 }
-.vcard {
+.tl-timeline .vcard {
  font-family: "trade-gothic-next", sans-serif;
   font-size: 15px;
   line-height: 15px;
   margin-bottom: 15px;
   margin-top: 10px;
 }
-.vcard:before,
-.vcard:after {
+.tl-timeline .vcard:before,
+.tl-timeline .vcard:after {
   display: table;
   content: "";
 }
-.vcard:after {
+.tl-timeline .vcard:after {
   clear: both;
 }
-.vcard .twitter-date {
+.tl-timeline .vcard .twitter-date {
   text-align: left;
   font-size: 11px;
 }
-.vcard .author {
+.tl-timeline .vcard .author {
   float: right;
 }
-.vcard a {
+.tl-timeline .vcard a {
   color: #333333;
   text-decoration: none;
 }
-.vcard a:hover {
+.tl-timeline .vcard a:hover {
   text-decoration: none;
 }
-.vcard a:hover .fn,
-.vcard a:hover .nickname {
+.tl-timeline .vcard a:hover .fn,
+.tl-timeline .vcard a:hover .nickname {
   color: #c34528;
 }
-.vcard .fn,
-.vcard .nickname {
+.tl-timeline .vcard .fn,
+.tl-timeline .vcard .nickname {
   padding-left: 42px;
 }
-.vcard .fn {
+.tl-timeline .vcard .fn {
   display: block;
   font-weight: bold;
 }
-.vcard .nickname {
+.tl-timeline .vcard .nickname {
   margin-top: 1px;
   display: block;
   color: #666666;
 }
-.vcard .avatar {
+.tl-timeline .vcard .avatar {
   float: left;
   display: block;
   width: 32px;
   height: 32px;
 }
-.vcard .avatar img {
+.tl-timeline .vcard .avatar img {
   -moz-border-radius: 5px;
   -webkit-border-radius: 5px;
   border-radius: 5px;
 }
-.tl-text ul {
+.tl-timeline .tl-text ul {
   padding: 0px;
   padding-left: 30px;
   margin: 0;
 }
-.tl-text ul li {
+.tl-timeline .tl-text ul li {
   margin-bottom: 5px;
 }
-.tl-button-calltoaction {
+.tl-timeline .tl-button-calltoaction {
   cursor: pointer;
   font-weight: bold;
   padding-top: 10px;
   margin-bottom: 10px;
   padding-bottom: 10px;
 }
-.tl-button-calltoaction .tl-button-calltoaction-text {
+.tl-timeline .tl-button-calltoaction .tl-button-calltoaction-text {
   display: inline-block;
   background-color: #c34528;
   color: #fff;
   padding: 10px 15px 10px 15px;
   border-radius: 7px;
 }
-.tl-note {
+.tl-timeline .tl-note {
   display: block;
   font-family: "Trade-gothic-next", sans-serif;
   font-style: italic;
@@ -198,17 +343,17 @@ blockquote p {
   text-shadow: none;
 }
 @media only screen and (max-width: 800px), only screen and (max-device-width: 800px) {
-h1,
-h2,
-h3 {
+  .tl-timeline h1,
+  .tl-timeline h2,
+  .tl-timeline h3 {
     font-size: 28px;
     line-height: 28px;
   }
 }
 @media only screen and (max-width: 500px), only screen and (max-device-width: 500px) {
-h1,
-h2,
-h3 {
+  .tl-timeline h1,
+  .tl-timeline h2,
+  .tl-timeline h3 {
     font-size: 24px;
     line-height: 24px;
   }
