--- a/css/fonts/font.default.css
+++ b/css/fonts/font.default.css
@@ -24,33 +24,33 @@ http://www.google.com/webfonts/specimen/PT+Serif
 /* GFX
 ================================================== */
 @font-face {
-  font-family: 'PT Sans';
+  font-family: "trade-gothic-next", sans-serif;
   font-style: normal;
   font-weight: 400;
-  src: url(https://fonts.gstatic.com/s/ptsans/v17/jizaRExUiTo99u79D0KEwA.ttf) format('truetype');
+  src: url(https://use.typekit.net/eay2lji.css);
 }
 @font-face {
-  font-family: 'PT Sans Narrow';
+  font-family: "trade-gothic-next", sans-serif;
   font-style: normal;
   font-weight: 700;
-  src: url(https://fonts.gstatic.com/s/ptsansnarrow/v18/BngSUXNadjH0qYEzV7ab-oWlsbg95AiFW_g.ttf) format('truetype');
+  src: url(https://use.typekit.net/eay2lji.css);
 }
 @font-face {
-  font-family: 'PT Serif';
+  font-family: "trade-gothic-next", sans-serif;
   font-style: italic;
   font-weight: 400;
-  src: url(https://fonts.gstatic.com/s/ptserif/v18/EJRTQgYoZZY2vCFuvAFT_r21dw.ttf) format('truetype');
+  src: url(https://use.typekit.net/eay2lji.css);
 }
 @font-face {
-  font-family: 'PT Serif';
+  font-family: "trade-gothic-next", sans-serif;
   font-style: normal;
   font-weight: 400;
-  src: url(https://fonts.gstatic.com/s/ptserif/v18/EJRVQgYoZZY2vCFuvAFWzro.ttf) format('truetype');
+  src: url(https://use.typekit.net/eay2lji.css);
 }
 /*	Font Base
 ----------------------------------------------------- */
 .tl-timeline {
-  font-family: 'PT Serif', serif;
+  font-family: "trade-gothic-next", sans-serif;
   font-weight: 400;
   font-size: 16px;
   line-height: 1.3em;
@@ -61,8 +61,7 @@ http://www.google.com/webfonts/specimen/PT+Serif
 .tl-timeline h4,
 .tl-timeline h5,
 .tl-timeline h6 {
-  font-family: 'PT Sans Narrow', sans-serif;
-  text-transform: uppercase;
+  font-family: "trade-gothic-next", sans-serif;
   font-weight: 700;
   font-size: 46px;
   line-height: 46px;
@@ -72,34 +71,34 @@ http://www.google.com/webfonts/specimen/PT+Serif
   line-height: 58px;
 }
 .tl-timeline p {
-  font-family: 'PT Serif', serif;
+font-family: "trade-gothic-next", sans-serif;
   font-size: 16px;
   line-height: 1.3em;
 }
 .tl-timeline ul {
-  font-family: 'PT Serif', serif;
+font-family: "trade-gothic-next", sans-serif;
 }
 .tl-timeline .tl-media .tl-media-wikipedia h4 a,
 .tl-timeline .tl-media h4,
 .tl-timeline .tl-media h4 a {
-  font-family: 'PT Serif', serif;
+font-family: "trade-gothic-next", sans-serif;
   font-weight: 700;
   font-size: 24px;
   line-height: 24px;
 }
 .tl-timeline .tl-caption,
 .tl-timeline .tl-credit {
-  font-family: 'PT Serif', serif;
+font-family: "trade-gothic-next", sans-serif;
 }
 .tl-timeline .vcard {
-  font-family: 'PT Sans Narrow', sans-serif !important;
+  font-family: "trade-gothic-next", sans-serif; !important;
   font-weight: normal !important;
 }
 .tl-timeline .tl-slidenav-next,
 .tl-timeline .tl-slidenav-previous,
 .tl-timeline .tl-message,
 .tl-timeline .tl-timegroup-message {
-  font-family: 'PT Sans Narrow', sans-serif;
+font-family: "trade-gothic-next", sans-serif;
   font-weight: 700;
   text-transform: uppercase;
 }
@@ -111,7 +110,7 @@ http://www.google.com/webfonts/specimen/PT+Serif
 }
 .tl-timeline .tl-headline-date,
 .tl-timeline h3.tl-headline-date {
-  font-family: 'PT Sans Narrow', sans-serif !important;
+font-family: "trade-gothic-next", sans-serif; !important;
   font-weight: normal !important;
   text-transform: uppercase !important;
 }
@@ -120,31 +119,31 @@ http://www.google.com/webfonts/specimen/PT+Serif
   font-weight: normal !important;
 }
 .tl-timeline .tl-timenav-slider {
-  font-family: 'PT Sans Narrow', sans-serif;
+font-family: "trade-gothic-next", sans-serif;
   font-weight: 700;
 }
 .tl-timeline .tl-timenav-slider h2.tl-headline {
-  font-family: 'PT Sans', sans-serif;
+font-family: "trade-gothic-next", sans-serif;
   font-weight: 700;
   text-transform: none;
 }
 .tl-timeline .tl-timenav-slider .tl-timeaxis {
-  font-family: 'PT Sans Narrow', sans-serif;
+font-family: "trade-gothic-next", sans-serif;
   font-weight: 700;
   text-transform: uppercase;
 }
 .tl-timeline .tl-menubar {
-  font-family: 'PT Sans Narrow', sans-serif;
+font-family: "trade-gothic-next", sans-serif;
 }
 .tl-timeline blockquote,
 .tl-timeline blockquote p {
-  font-family: 'PT Serif', serif;
+font-family: "trade-gothic-next", sans-serif;
   font-style: italic;
   font-weight: 400;
   line-height: 1.3;
 }
 input[type="text"].editor-headline {
-  font-family: 'PT Sans Narrow', sans-serif;
+font-family: "trade-gothic-next", sans-serif;
   text-transform: uppercase;
   font-weight: 700;
   font-size: 46px;
